--- a/cms/templates/widgets/footer.html
+++ b/cms/templates/widgets/footer.html
@@ -47,10 +47,11 @@ from openedx.core.djangolib.markup import HTML, Text
         ## Site operators: Please do not remove this paragraph! This attributes back to edX and makes your acknowledgement of edX's trademarks clear.
         <p>
           ## Translators: 'edX' and 'Open edX' are trademarks of 'edX Inc.'. Please do not translate any of these trademarks and company names.
-          ${Text(_("edX, Open edX, and the edX and Open edX logos are registered trademarks of {link_start}edX Inc.{link_end}")).format(
+          ${Text(_("edX, Open edX, and the edX and Open edX logos are registered trademarks of {link_start}edX Inc.{link_end}{link_start_engaged}")).format(
             link_start=HTML(u"<a data-rel='edx.org' href='https://www.edx.org/'>"),
-            link_end=HTML(u"</a>")
-          ) | n}
+            link_end=HTML(u"</a>"),
+            link_start_engaged=HTML(u"<a target='_blank' href='https://www.engaged.com.br'>")
+          )}
         </p>
       </div>
 
