--- a/lms/templates/student_account/account_settings.html
+++ b/lms/templates/student_account/account_settings.html
@@ -81,6 +81,22 @@ from openedx.core.djangoapps.user_api.accounts.utils import is_secondary_email_f
      window.mktgRootLink = "${ static.marketing_link('ROOT') | n, js_escaped_string }";
      window.platformName = "${ platform_name | n, js_escaped_string }";
      window.siteName = "${ static.get_value('SITE_NAME', settings.SITE_NAME) | n, js_escaped_string }";
+
+    checkIfComponentsAreAvailable();
+
+    function checkIfComponentsAreAvailable() {
+        if(
+            document.getElementById("u-field-message-help-social_links_facebook") && 
+            document.getElementById("u-field-message-help-social_links_twitter") && 
+            document.getElementById("u-field-message-help-social_links_linkedin")
+        ) {
+                document.getElementById("u-field-message-help-social_links_facebook").innerHTML = "${_('Enter your Facebook username or Facebook page link. Delete the link if you want to remove it from your EAD profile')}"
+                document.getElementById("u-field-message-help-social_links_twitter").innerHTML = "${_('Enter your LinkedIn username or LinkedIn page link. Delete the link if you want to remove it from your EAD profile')}"
+                document.getElementById("u-field-message-help-social_links_linkedin").innerHTML = "${_('Enter your Twitter username or Twitter page link. Delete the link if you want to remove it from your EAD profile')}"  
+        } else {
+            setTimeout(checkIfComponentsAreAvailable, 500)
+        }
+    }
 </script>
 <%static:webpack entry="StudentAccountDeletionInitializer">
 </%static:webpack>
